Add Bloggr Client app, update server: PUT /posts/:id

--- a/client/.jshintrc
+++ b/client/.jshintrc
@@ -4,6 +4,7 @@
         "App",
         "console",
         "Ember",
+        "Handlebars",
         "DS",
         "equal",
         "asyncEqual",
@@ -23,7 +24,9 @@
         "jQuery",
         "$",
         "expectAssertion",
-        "exports"
+        "exports",
+        "moment",
+        "showdown"
     ],
 
     "node" : false,
