Setup testem runner

--- a/client/.jshintrc
+++ b/client/.jshintrc
@@ -3,30 +3,35 @@
         "window",
         "App",
         "console",
+        "jQuery",
+        "$",
         "Ember",
         "Handlebars",
         "DS",
+        "moment",
+        "showdown",
+        "visit",
+        "find",
+        "fillIn",
+        "click",
+        "keyEvent",
+        "ok",
         "equal",
         "asyncEqual",
         "notEqual",
-        "asyncTest",
-        "test",
-        "raises",
         "deepEqual",
+        "strictEqual",
         "start",
         "stop",
-        "ok",
-        "strictEqual",
-        "module",
-        "expect",
         "async",
+        "asyncTest",
         "invokeAsync",
-        "jQuery",
-        "$",
-        "expectAssertion",
-        "exports",
-        "moment",
-        "showdown"
+        "raises",
+        "expect",
+        "test",
+        "module",
+        "path",
+        "exists"
     ],
 
     "node" : false,
