--- a/client/bower.json
+++ b/client/bower.json
@@ -5,9 +5,8 @@
   "dependencies": {
     "jquery": "~1.10.2",
     "handlebars": "~1.2.1",
-    "ember": "~1.3.1",
-    "ember-state-manager": "*",
-    "ember-data": "~1.0.0-beta.5"
+    "ember": "~1.4.0-beta.4",
+    "ember-data": "~1.0.0-beta.6"
   },
   "devDependencies": {
     "qunit": "~1.13.0",
