--- a/client/bower.json
+++ b/client/bower.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "jquery": "~1.10.2",
-    "handlebars": "~1.2.1",
+    "handlebars": "~1.3.0",
     "ember": "~1.4.0-beta.4",
-    "ember-data": "~1.0.0-beta.6"
+    "ember-data": "~1.0.0-beta.6",
+    "momentjs": "~2.5.1",
+    "showdown": "~v0.3.1"
   },
   "devDependencies": {
     "qunit": "~1.13.0",
