clean up build, add PUT test

--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,9 @@
   "summary": "",
   "description": "App",
   "homepage": "",
-  "author": [ "" ],
+  "author": [
+    ""
+  ],
   "version": "0.0.1",
   "repository": {
     "type": "git",
