--- a/client/.jshintrc
+++ b/client/.jshintrc
@@ -1,70 +1,69 @@
 {
-    "predef": [
-        "export",
-        "exports",
-        "window",
-        "App",
-        "console",
-        "jQuery",
-        "$",
-        "Ember",
-        "Handlebars",
-        "DS",
-        "moment",
-        "Showdown",
-        "showdown",
-        "visit",
-        "find",
-        "fillIn",
-        "click",
-        "keyEvent",
-        "ok",
-        "equal",
-        "asyncEqual",
-        "notEqual",
-        "deepEqual",
-        "strictEqual",
-        "start",
-        "stop",
-        "async",
-        "asyncTest",
-        "invokeAsync",
-        "raises",
-        "expect",
-        "test",
-        "module",
-        "path",
-        "exists",
-        "text",
-        "hasText",
-        "hyperlink",
-        "unload"
-    ],
+  "predef": [
+    "module",
+    "exports",
+    "require",
+    "window",
+    "console",
+    "jQuery",
+    "$",
+    "Ember",
+    "Handlebars",
+    "DS",
+    "moment",
+    "Showdown",
+    "showdown",
+    "App",
+    "visit",
+    "find",
+    "fillIn",
+    "click",
+    "keyEvent",
+    "ok",
+    "equal",
+    "asyncEqual",
+    "notEqual",
+    "deepEqual",
+    "strictEqual",
+    "start",
+    "stop",
+    "async",
+    "asyncTest",
+    "invokeAsync",
+    "raises",
+    "expect",
+    "test",
+    "path",
+    "exists",
+    "text",
+    "hasText",
+    "hyperlink",
+    "unload"
+  ],
 
-    "node" : false,
-    "es3" : true,
-    "browser" : true,
-
-    "boss" : true,
-    "curly": false,
-    "debug": false,
-    "devel": false,
-    "eqeqeq": true,
-    "evil": true,
-    "forin": false,
-    "immed": false,
-    "laxbreak": false,
-    "newcap": true,
-    "noarg": true,
-    "noempty": false,
-    "nonew": false,
-    "nomen": false,
-    "onevar": false,
-    "plusplus": false,
-    "regexp": false,
-    "undef": true,
-    "sub": true,
-    "strict": false,
-    "white": false,
-    "eqnull": true
+  "node": false,
+  "browser": false,
+  "boss": true,
+  "curly": false,
+  "debug": false,
+  "devel": false,
+  "eqeqeq": true,
+  "evil": true,
+  "forin": false,
+  "immed": false,
+  "laxbreak": false,
+  "newcap": true,
+  "noarg": true,
+  "noempty": false,
+  "nonew": false,
+  "nomen": false,
+  "onevar": false,
+  "plusplus": false,
+  "regexp": false,
+  "undef": true,
+  "sub": true,
+  "strict": false,
+  "white": false,
+  "eqnull": true,
+  "esnext": false
 }
