--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "express": "~3.4.2",
     "cors": "*",
-    "debug": "*"
+    "debug": "*",
+    "inflect": "~0.3.0"
   },
   "devDependencies": {
     "mocha": "*",
