update Makefile for mocha test runner

--- a/server/Makefile
+++ b/server/Makefile
@@ -17,7 +17,7 @@ lint:
 	@jshint lib/* app.js tests/*
 
 test: lint seed
-	@mocha --reporter spec tests/*
+	@./node_modules/.bin/mocha --reporter spec tests/*
 
 server:
 	@DEBUG=* node app.js
