--- a/client/bower.json
+++ b/client/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "app",
-  "version": "0.0.1",
+  "name": "blog",
+  "version": "0.1",
   "private": true,
   "dependencies": {
     "jquery": "~1.10.2",
@@ -8,7 +8,8 @@
     "ember": "~1.4.0-beta.4",
     "ember-data": "~1.0.0-beta.6",
     "momentjs": "~2.5.1",
-    "showdown": "~v0.3.1"
+    "showdown": "~v0.3.1",
+    "normalize-css": "~3.0.0"
   },
   "devDependencies": {
     "qunit": "~1.13.0",
