Fix sever tests after restricted post, put, delete

--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "mocha": "*",
     "supertest": "*",
+    "superagent": "*",
     "request": "*",
     "async": "*"
   }
